--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <div
-  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top"
+  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-1 px-md-1 mb-1 bg-white border-bottom shadow-sm fixed-top"
 >
-  <img src="/assets/images/logo.png" style="max-height: 45px" alt="logo" />
+  <img src="/assets/images/logo.png" style="max-height: 60px;" alt="logo" />
   <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: large;">
     <a class="p-2 text-dark" href="#">Home</a>
     <a class="p-2 text-dark" href="#">Shop</a>
