--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -10,15 +10,15 @@
 
       <h5 class="text-warning ml-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.brandIdSelected"
-          [value]="brand.id" (click)="onBrandSelected(brand.id)" aria-current="true">
+        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
+          [value]="brand.id" (click)="onBrandSelected(brand.id)">
           {{ brand.name }}
         </li>
       </ul>
       <h5 class="text-warning ml-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.typeIdSelected"
-          [value]="type.id" (click)="onTypeSelected(type.id)" aria-current="true">
+        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
+          [value]="type.id" (click)="onTypeSelected(type.id)">
           {{ type.name }}
         </li>
       </ul>
@@ -28,14 +28,15 @@
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="d-flex justify-context-between align-items-center pb-2">
-            <header class="pr-lg-5">
-              <span>Showing <strong>10</strong> of
-                <strong>16</strong> Results</span>
-            </header>
+            <app-paging-header
+            [totalCount]="totalCount"
+            [pageSize]="this.shopParams.pageSize"
+            [pageNumber]="this.shopParams.pageNumber"
+            ></app-paging-header>
             <div class="form-inline pl-5">
-              <input class="form-control" style="width: 300px" placeholder="Search" type="text" />
-              <button class="btn btn-outline-primary my-2">Search</button>
-              <button class="btn btn-outline-success my-2">Reset</button>
+              <input (keyup.enter)="onSearch()" class="form-control" #search style="width: 300px" placeholder="Search" type="text" />
+              <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
+              <button (click)="onReset()" class="btn btn-outline-success my-2">Reset</button>
             </div>
           </div>
           <div class="row">
@@ -44,6 +45,9 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="d-flex justify-content-center" *ngIf="totalCount>0">
+        <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize" (pageChanged)="onPageChanged($event)"></app-pager>
       </div>
     </Section>
   </div>
