--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,18 +1,17 @@
 <div
-  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-1 px-md-1 mb-1 bg-white border-bottom shadow-sm fixed-top"
->
-  <img src="/assets/images/logo.png" style="max-height: 60px;" alt="logo" />
+  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-1 px-md-1 mb-1 bg-white border-bottom shadow-sm fixed-top">
+  <img src="/assets/images/logo.png" style="max-height: 60px;" alt="logo" routerLink="/" class="logo"/>
   <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: large;">
-    <a class="p-2 text-dark" href="#">Home</a>
-    <a class="p-2 text-dark" href="#">Shop</a>
-    <a class="p-2 text-dark" href="#">Contact</a>
+    <a class="p-2" [routerLink]="['/']" routerLinkActive="active"[routerLinkActiveOptions]="{exact:true}" >Home</a>
+    <a class="p-2" routerLink="/shop"routerLinkActive="active">Shop</a>
+    <a class="p-2" href="#">Contact</a>
   </nav>
   <div class="d-flex align-item-center">
     <a class="position-relative">
       <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"> </i>
       <div class="cart-no">5</div>
     </a>
-    <a class="btn btn-outline-primary mr-2" >Login</a>
+    <a class="btn btn-outline-primary mr-2">Login</a>
     <a class="btn btn-outline-secondary mr-3">Sign up</a>
   </div>
 </div>
