--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -1,5 +1,5 @@
-.cart-no{
-    position: absolute;//be sure that the parent element is position relative!-->in this case parent is "a"
+.cart-no {
+    position: absolute; //be sure that the parent element is position relative!-->in this case parent is "a"
     min-height: 25px;
     min-width: 25px;
     border-radius: 50%;
@@ -8,5 +8,22 @@
     color: white;
     text-align: center;
     top: -12px;
-    right: 32px; 
+    right: 32px;
+}
+
+a {
+    text-decoration: none;
+    color: #343a40;
+
+    &.active {
+        color: orange;
+    }
+}
+
+.logo {
+    cursor: pointer;
+
+    &.focus {
+        outline: none;
+    }
 }
