--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,15 @@
 <div class="card h-100 shadow-sm">
 
-    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid bg-info">
+    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid" style="background-color: #f1f1f2;">
     <div class="card-body d-flex flex-column">
-        <a href="#">
+        <a routerLink="{{product.id}}">
             <h6 class="text-uppercase">{{product.name}}</h6>
         </a>
         <span class="mb-s">{{product.price|currency}}</span>
 
         <div class="btn-group mt-auto">
             <button type="button" class="btn  btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-            <button type="button" class="btn btn-outline-secondary">View</button>
+            <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-outline-secondary">View</button>
         </div>
     </div>
 </div>
