--- a/client/src/app/shop/product-details/product-details.component.scss
+++ b/client/src/app/shop/product-details/product-details.component.scss
@@ -7,15 +7,15 @@
 
 .container {
     min-height: 100vh;
-    // background-color: #668489;
     display: flex;
     justify-content: center;
-    align-items: center
+    align-items: center;
+    padding: 10%;
 }
 
 .card {
-    top: -50px;
-    max-height: 500px;
+    top: -90px;
+    max-height: 550px;
     width: 320px;
     background-color: #fff;
     border-radius: 10px;
@@ -23,7 +23,8 @@
     box-sizing: border-box;
     position: relative;
     font-family: 'Poppins', sans-serif;
-    overflow: hidden
+    overflow: hidden;
+    box-shadow: 1px 1px 5px 5px #d6d5d0af;
 }
 
 .top-div {
@@ -153,12 +154,12 @@
 }
 
 #minus:hover {
-    background-color: #e43e38;
+    background-color: #ffbf00;;
     transition: all 0.3s;
 }
 
 #plus:hover {
-    background-color: #43af33;
+    background-color: #ffbf00;;
     transition: all 0.3s;
 }
 
@@ -186,7 +187,7 @@
     width: 100%;
     background-color: #132228;
     border-radius: 10px;
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     align-items: center;
     transition: all 0.3s;
@@ -198,10 +199,12 @@
     position: relative
 }
 
-.last i {
+.last{
     font-size: 35px;
-    margin-top: 2px;
-    color: #F6F6F6
+    // margin-top: 20px;
+    color: #F6F6F6;
+    display: inline;
+    
 }
 
 .last button {
@@ -226,10 +229,11 @@
     margin-top: 1px
 }
 
+
 .last-section:hover {
-    background-color: #541de0
+    background-color: #ffbf00;
 }
 
 .last button:hover {
-    background-color: #541de0
+    background-color: #ffbf00;
 }
