--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,15 +1,24 @@
-<div class="card h-100 shadow-sm">
-
-    <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid" style="background-color: #f1f1f2;">
-    <div class="card-body d-flex flex-column">
-        <a routerLink="{{product.id}}">
-            <h6 class="text-uppercase">{{product.name}}</h6>
-        </a>
-        <span class="mb-s">{{product.price|currency}}</span>
-
-        <div class="btn-group mt-auto">
-            <button type="button" class="btn  btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-            <button routerLink="/shop/{{product.id}}" type="button" class="btn btn-outline-secondary">View</button>
+<div class="product-card h-100 shadow-sm">
+    <div class="product-grid">
+        <div class="product-image">
+            <a href="#" class="image">
+                <img class="pic-1" src="{{product.pictureUrl}}">
+            </a>
+            <ul class="product-links">
+                <li><a href="/shop/{{product.id}}" data-tip="Add to Cart"><i class="fa fa-shopping-bag"></i></a></li>
+                <li><a href="/shop/{{product.id}}" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+                <li><a href="#" data-tip="Wishlist"><i class="fas fa-heart"></i></a></li>
+            </ul>
+            <div class="price">{{product.price|currency}}</div>
+        </div>
+        <div class="product-content">
+            <h3 class="title"><a href="/shop/{{product.id}}" style="text-decoration: none;">{{product.name}}</a></h3>
+            <ul class="rating">
+                <li class="fas fa-star"></li>
+                <li class="fas fa-star"></li>
+                <li class="fas fa-star"></li>
+                <li class="fas fa-star"></li>
+                <li class="fas fa-star "></li>
+            </ul>
         </div>
     </div>
-</div>
