--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,40 +1,42 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <Section class="col-3">
-      <h5 class="text-warning ml-3">Sort</h5>
-      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let sort of sortOptions" [value]="sort.value">
-          {{ sort.name }}
-        </option>
-      </select>
+       <ng-container *ngIf="types&&brands"><!--this ngif is for not displaying contents before loading -->
 
-      <h5 class="text-warning ml-3">Brands</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
-          [value]="brand.id" (click)="onBrandSelected(brand.id)">
-          {{ brand.name }}
-        </li>
-      </ul>
-      <h5 class="text-warning ml-3">Types</h5>
-      <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
-          [value]="type.id" (click)="onTypeSelected(type.id)">
-          {{ type.name }}
-        </li>
-      </ul>
+        <h5 class="text-warning ml-3 mb-3">Sort</h5>
+        <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
+          <option *ngFor="let sort of sortOptions" [value]="sort.value">
+            {{ sort.name }}
+          </option>
+        </select>
+
+        <h5 class="text-warning ml-3">Brands</h5>
+        <ul class="list-group my-3" style="cursor:pointer ;">
+          <li class="list-group-item" *ngFor="let brand of brands" [class.active]="brand.id === this.shopParams.brandId"
+            [value]="brand.id" (click)="onBrandSelected(brand.id)">
+            {{ brand.name }}
+          </li>
+        </ul>
+        <h5 class="text-warning ml-3">Types</h5>
+        <ul class="list-group my-3" style="cursor: pointer;">
+          <li class="list-group-item" *ngFor="let type of types" [class.active]="type.id === this.shopParams.typeId"
+            [value]="type.id" (click)="onTypeSelected(type.id)">
+            {{ type.name }}
+          </li>
+        </ul>
+      </ng-container>
     </Section>
 
     <Section class="col-9">
       <div class="album py-5 bg-light">
         <div class="container">
-          <div class="d-flex justify-context-between align-items-center pb-2">
-            <app-paging-header
-            [totalCount]="totalCount"
-            [pageSize]="this.shopParams.pageSize"
-            [pageNumber]="this.shopParams.pageNumber"
-            ></app-paging-header>
-            <div class="form-inline pl-5">
-              <input (keyup.enter)="onSearch()" class="form-control" #search style="width: 300px" placeholder="Search" type="text" />
+          <div class="d-flex justify-context-between align-items-center pb-2" id="pedram">
+            <app-paging-header [totalCount]="totalCount" [pageSize]="this.shopParams.pageSize"
+              [pageNumber]="this.shopParams.pageNumber"></app-paging-header>
+
+            <div class="form-inline" *ngIf="products"><!--this ngif is for not displaying contents before loading -->
+              <input (keyup.enter)="onSearch()" class="form-control" #search style="width: 300px" placeholder="Search"
+                type="text" />
               <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
               <button (click)="onReset()" class="btn btn-outline-success my-2">Reset</button>
             </div>
@@ -47,7 +49,8 @@
         </div>
       </div>
       <div class="d-flex justify-content-center" *ngIf="totalCount>0">
-        <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize" (pageChanged)="onPageChanged($event)"></app-pager>
+        <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize"
+          (pageChanged)="onPageChanged($event)"></app-pager>
       </div>
     </Section>
   </div>
