End of Section17

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -11,3 +11,5 @@ label.xng-breadcrumb-trail{
 .xng-breadcrumb-separator{
     padding: 0 0;
 }
+/* Importing Bootstrap SCSS file. */
+@import "./node_modules/bootstrap/scss/bootstrap";
