--- a/client/src/app/shared/Components/order-totals/order-totals.component.html
+++ b/client/src/app/shared/Components/order-totals/order-totals.component.html
@@ -1,4 +1,4 @@
-<div class="bg-light px-4 py-3 text-uppercase font-weight-bold">
+<div class="bg-light px-4 py-3 text-uppercase font-weight-bold order">
     Order Summery
 </div>
 <div class="p-4">
