--- a/client/src/app/checkout/checkout-address/checkout-address.component.html
+++ b/client/src/app/checkout/checkout-address/checkout-address.component.html
@@ -1,7 +1,7 @@
 <div class="mt-4" [formGroup]="checkoutForm">
     <div class="d-flex justify-content-between align-items-center">
         <h4>Shipping address</h4>
-        <button (click)="saveUserAddress()" [disabled]="!checkoutForm.get('addressForm').valid||!checkoutForm.get('addressForm').dirty" class="btn btn-outline-success">
+        <button (click)="saveUserAddress()" [disabled]="!checkoutForm.get('addressForm')?.valid||!checkoutForm.get('addressForm')?.dirty" class="btn btn-outline-success">
             Save as default address
         </button>
     </div>
@@ -30,7 +30,7 @@
     <button class="btn btn-outline-primary" routerLink="/basket">
         <i class="fa fa-angle-left"></i>Back to Basket
     </button>
-    <button class="btn btn-primary" cdkStepperNext>
+    <button [disabled]="checkoutForm.get('addressForm')?.invalid" class="btn btn-primary" cdkStepperNext>
         Go to Delivery<i class="fa fa-angle-right"></i>
     </button>
 </div>
