--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -1,13 +1,12 @@
 <div class="row" *ngIf="product">
     <div class="container">
         <div class="card">
-            <div class="top-div"> <span><i class="fa fa-angle-left"></i></span> <span><i
-                        class="fa fa-shopping-cart"></i><small></small></span> </div>
+            <div class="top-div"> <a routerLink="/shop"><span><i class="fa fa-angle-left"></i></span> </a><a
+                    routerLink="/basket"><span> <i class="fa fa-shopping-cart"></i><small></small></span></a> </div>
             <div class="image-section"> <img src="{{product.pictureUrl}}" alt="{{product.name}}">
-                <!-- <div class="circle"> <span></span> <span></span> <span></span> <span></span> </div> -->
             </div>
             <div class="bottom-div">
-                <h3>{{product.name}}</h3>
+                <h4 style="font-weight:bold;">{{product.name}}</h4>
                 <div class="sign"> <span (click)="decrementQuantity()" id="minus"><i class="fa fa-minus"></i></span>
                     <small id="quantity">{{quantity}}</small>
                     <span (click)="incrementQuantity()" id="plus"><i class="fa fa-plus"></i></span>
@@ -16,8 +15,8 @@
 
             <p id="desc">{{product.description}}</p>
 
-            <div class="last-section">
-                <div class="last"> <i class="fa fa-plus-square"></i> <button (click)="addItemToBakset()">
+            <div class="last-section"(click)="addItemToBakset()">
+                <div class="last"> <i class="fa fa-plus-square"></i> <button >
                         Add to cart
                     </button>
                 </div>
