--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -5,7 +5,7 @@
 
         <h5 class="text-warning ml-3 mb-3">Sort</h5>
         <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
-          <option *ngFor="let sort of sortOptions" [value]="sort.value">
+          <option *ngFor="let sort of sortOptions" [selected]="shopParams.sort===sort.value" [value]="sort.value">
             {{ sort.name }}
           </option>
         </select>
@@ -50,7 +50,7 @@
       </div>
       <div class="d-flex justify-content-center" *ngIf="totalCount>0">
         <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize"
-          (pageChanged)="onPageChanged($event)"></app-pager>
+          [pageNumber]="shopParams.pageNumber" (pageChanged)="onPageChanged($event)"></app-pager>
       </div>
     </Section>
   </div>
